#582 closed bug (fixed)
Deskbar displays empty Haiku menu
Reported by: | Owned by: | jackburton | |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha1 |
Component: | Kits/Interface Kit | Version: | |
Keywords: | Cc: | diver, olivier.coursiere@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
The Deskbar displays an empty Haiku menu under the following circumstances.
1) Click any of the window entries in the Deskbar (for example, Tracker) to display the option menu.
2) With the above option menu open, click on the Haiku menu (where the Haiku logo is). An empty menu with a white background is displayed.
This bug appeared in HAIKU revision 17432. Screenshot follows.
Attachments (3)
Change History (31)
by , 18 years ago
Attachment: | bug_17432_deskbar.png added |
---|
comment:1 by , 18 years ago
Owner: | changed from | to
---|
comment:2 by , 18 years ago
Component: | Applications → Kits |
---|
comment:5 by , 18 years ago
Cc: | added |
---|
comment:6 by , 18 years ago
Cc: | added |
---|
comment:7 by , 18 years ago
Status: | new → assigned |
---|
comment:10 by , 18 years ago
Component: | General → User Interface/InterfaceKit |
---|---|
Description: | modified (diff) |
Platform: | → All |
follow-up: 14 comment:13 by , 17 years ago
Oh well those changes you've made didn't fix this bug, it just made it less likely to happen. I still see <empty> menu item sometimes when clicking on leaf. It even locked up once trying to reproduce this bug. Also current behavour is different from BeOS as you could click bemenu while teammenu is clicked down.
comment:14 by , 17 years ago
Replying to diver:
Oh well those changes you've made didn't fix this bug, it just made it less likely to happen. I still see <empty> menu item sometimes when clicking on leaf. It even locked up once trying to reproduce this bug.
Is there a reproducible way to do that ?
Also current behavour is different from BeOS as you could click bemenu while teammenu is clicked down.
Are you absolutely sure about that ? Because I changed the menu behaviour recently exactly to match beos's behaviour.
comment:15 by , 17 years ago
I found another way to reproduce this:
- Open the Haiku menu on the Deskbar. Leave it open.
- Use Alt-F2 to switch to the second workspace. The menu will disappear, but the Haiku button is still grayed like it is selected.
- Click on Tracker to get its team menu.
- Click back on the Haiku menu and the <empty> menu appears.
In BeOS if you switch workspace while the Be menu is open it is closed. In fact all menus close when workspaces are switched.
To fix this bug the Haiku app_server or interface kit needs to close open menus when workspaces are switched.
comment:16 by , 17 years ago
Actually I just tested some more and I can reproduce this using with the same steps as in the original bug report. If it matters I'm testing on VMWare and compiling with GCC 4.1.2.
comment:17 by , 17 years ago
Sorry to spam, but I just recompiled with GCC 2.95.3 (just in case) and I still see this problem.
comment:18 by , 17 years ago
Looks like it was since hrev21961. I am not saying that change it's wrong, but at least it made the bug show up again.
comment:19 by , 17 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
comment:20 by , 17 years ago
Milestone: | R1 → R1/alpha |
---|
comment:21 by , 16 years ago
I could reproduce with the original bug description. Some graphics bugs are gone (see attached screenshot), but the <empty> menu item is still there. You can see the correct be menu for ~0.1 second though.
Also, while updating bug #478, i collected new info about this one.
If you drag'n'drop anything (text, file, folder) over the Be menu, the greyed <empty> menuitem replaces the correct be menu when you release the mouse (ie: when dropping).
The interesting thing is that it only happens if, while dragging to the Be menu, you roll over any team/app menuitem (wich puts the item in a "pushed-down" state, or selected state depending on what you drag).
Hope this helps
by , 16 years ago
Attachment: | emptyBeMenu.png added |
---|
comment:22 by , 16 years ago
Happens _partially_ (my test case only) on R5. See screenshot. I hope i didn't hijack this ticket, as this reveals this might be caused by different bugs. Well, enough bug hunting for today! zzz...
by , 16 years ago
Attachment: | emptyBeMenuR5.png added |
---|
comment:23 by , 16 years ago
Interesting... since it also happen on R5, either it's a bug in Deskbar, or a bug in the menu system we replicated (talk about compatibility, eh? :))... or even both :)
follow-up: 25 comment:24 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed again in hrev24005.
follow-up: 26 comment:25 by , 16 years ago
Replying to jackburton:
Fixed again in hrev24005.
Hmm, the original bug seems fixed indeed. Although it might only be partially fixed, i just re-tested an older revision, the behavior has changed, i have to click one more time to open the leaf menu if a team/app menu is open as in the original bug description (hrev24004 ?).
Also, my test case is still bugged here, should we move it to a new ticket or you've got a fix in mind?
And to finish, #478 still crashes but it might be unrelated.
Regards, Alex
comment:26 by , 16 years ago
Replying to aldeck:
Replying to jackburton:
Fixed again in hrev24005.
Hmm, the original bug seems fixed indeed. Although it might only be partially fixed, i just re-tested an older revision, the behavior has changed, i have to click one more time to open the leaf menu if a team/app menu is open as in the original bug description (hrev24004 ?).
Yeah, but isn't this what happens on beos too ?
Also, my test case is still bugged here, should we move it to a new ticket or you've got a fix in mind?
Let's move it to a new ticket :)
And to finish, #478 still crashes but it might be unrelated.
Definitely.
Deskbar screenshot