If there's a opened menu, the window should "eat" the B_MOUSE_DOWN message. This fixes bug #582 and now menus behave like on beos (or should, at least)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20799 a95241bf-73f2-0310-859d-f6bbb57e9c96